src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Operation Cases</fullName>
        <description>Creation of cases related to daily operations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Final_Collection__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Final Collection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week_to_be_Debited__c</fullName>
        <formula>Operation__r.Day_of_the_Week_to_be_Debited__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week to be Debited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Amount_to_be_Debited__c</fullName>
        <formula>Operation__r.Final_Amount_to_be_Debited__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Amount to be Debited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Collection__c</fullName>
        <formula>TEXT(Operation__r.Frequency_of_Collection__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency of Collection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Outstanding_Interest__c</fullName>
        <formula>Operation__r.Loan_Outstanding_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Outstanding Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Outstanding_Principal__c</fullName>
        <formula>Operation__r.Loan_Outstanding_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Outstanding Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation</label>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Fees__c</fullName>
        <formula>Operation__r.Outstanding_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Verbal_Loan_Status_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verbal Loan Status Provided</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Change_Contact_Details</fullName>
        <active>true</active>
        <businessProcess>Operation Cases</businessProcess>
        <description>Change of contact details</description>
        <label>Change Contact Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_to_Loan</fullName>
        <active>true</active>
        <businessProcess>Operation Cases</businessProcess>
        <description>Change to loan</description>
        <label>Change to Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Status_Update_Phone</fullName>
        <active>true</active>
        <businessProcess>Operation Cases</businessProcess>
        <description>Request status of loan over phone</description>
        <label>Loan Status Update (Phone)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Status_Update_Sending_Loan</fullName>
        <active>true</active>
        <businessProcess>Operation Cases</businessProcess>
        <description>Request status of loan to be sent</description>
        <label>Loan Status Update (Sending Loan)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Missed_Payment</fullName>
        <active>true</active>
        <businessProcess>Operation Cases</businessProcess>
        <label>Missed Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renew_Loan</fullName>
        <active>true</active>
        <businessProcess>Operation Cases</businessProcess>
        <description>Renew loan</description>
        <label>Renew Loan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>